[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^1.0.0a3"
PyYAML = "^5.4.1"
tomli = "^0.2.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b2", allow-prereleases = true}
isort = "^5.8.0"
pre-commit = "^2.13.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
